--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "prettier --write src/**/*.ts"
   },
   "dependencies": {
+    "@thi.ng/iterators": "^5.1.65",
     "p5": "^1.3.1"
   },
   "devDependencies": {
