--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@thi.ng/iterators": "^5.1.65",
+    "@thi.ng/random": "^2.4.2",
     "p5": "^1.3.1"
   },
   "devDependencies": {
