feat: add yifan210721

--- a/tools/config.json
+++ b/tools/config.json
@@ -12,6 +12,12 @@
             "screenshot": "yifan210720.png",
             "description": "recreate of Marina Apollonio: neat logo-like design",
             "reference": "https://www.pinterest.ca/pin/562950022148386156/"
+        },
+        {
+            "name": "yifan210721",
+            "screenshot": "yifan210721.png",
+            "description": "tokyo 2020",
+            "reference": "https://openprocessing.org/sketch/1236675/"
         }
     ]
 }
