feat: add yifan210722

--- a/tools/config.json
+++ b/tools/config.json
@@ -18,6 +18,12 @@
             "screenshot": "yifan210721.png",
             "description": "tokyo 2020",
             "reference": "https://openprocessing.org/sketch/1236675/"
+        },
+        {
+            "name": "yifan210722",
+            "screenshot": "yifan210722.png",
+            "description": "hay fever",
+            "reference": ""
         }
     ]
 }
