--- a/tools/config.json
+++ b/tools/config.json
@@ -24,6 +24,12 @@
             "screenshot": "yifan210722.png",
             "description": "hay fever",
             "reference": ""
+        },
+        {
+            "name": "yifan210723",
+            "screenshot": "yifan210723.png",
+            "description": "play with @thi.ng/grid-iterators",
+            "reference": "https://github.com/thi-ng/umbrella/tree/develop/examples/grid-iterators"
         }
     ]
 }
