--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf .cache build",
     "build": "snowpack build",
     "start": "snowpack dev --reload",
+    "test": "web-test-runner \"src/**/*.test.ts\"",
     "lint": "prettier --write src/**/*.ts",
     "new": "zx ./scripts/new.js",
     "doc:sketches": "ts-node -P tools/tsconfig.json tools/src/readme-sketches.ts",
@@ -23,7 +24,12 @@
   },
   "devDependencies": {
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@snowpack/web-test-runner-plugin": "^0.2.2",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^9.0.0",
     "@types/p5": "^1.3.0",
+    "@web/test-runner": "^0.13.15",
+    "chai": "^4.3.4",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "snowpack": "^3.8.2",
