feat: add yifan210804

--- a/tools/config.json
+++ b/tools/config.json
@@ -42,6 +42,12 @@
             "screenshot": "yifan210729.png",
             "description": "recreate of Sayama191227",
             "reference": "https://openprocessing.org/sketch/816453"
+        },
+        {
+            "name": "yifan210804",
+            "screenshot": "yifan210804.png",
+            "description": "stack up!",
+            "reference": ""
         }
     ]
 }
