feat: add yifan210804

--- a/tools/config.json
+++ b/tools/config.json
@@ -48,6 +48,12 @@
             "screenshot": "yifan210804.png",
             "description": "stack up!",
             "reference": ""
+        },
+        {
+            "name": "yifan210806",
+            "screenshot": "yifan210806.png",
+            "description": "dots",
+            "reference": ""
         }
     ]
 }
