--- a/tools/config.json
+++ b/tools/config.json
@@ -54,6 +54,12 @@
             "screenshot": "yifan210806.png",
             "description": "dots",
             "reference": ""
+        },
+        {
+            "name": "yifan210809",
+            "screenshot": "yifan210809.png",
+            "description": "more dots",
+            "reference": ""
         }
     ]
 }
