feat: add yifan210810

--- a/tools/config.json
+++ b/tools/config.json
@@ -60,6 +60,12 @@
             "screenshot": "yifan210809.png",
             "description": "more dots",
             "reference": ""
+        },
+        {
+            "name": "yifan210810",
+            "screenshot": "yifan210810.png",
+            "description": "",
+            "reference": "https://twitter.com/takawo/status/1424730296574889984"
         }
     ]
 }
