--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/p5": "^1.3.0",
     "@web/test-runner": "^0.13.15",
     "chai": "^4.3.4",
+    "dateformat": "^4.5.1",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "snowpack": "^3.8.2",
