--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "snowpack": "^3.8.2",
+    "ts-node": "^10.2.1",
     "typescript": "^4.3.5",
     "zx": "^2.0.0"
   }
