style: add eslint import order

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "snowpack build",
     "start": "snowpack dev --reload",
     "test": "web-test-runner \"src/**/*.test.ts\"",
-    "lint": "prettier --write src/**/*.ts",
+    "lint": "eslint . --quiet --fix --ext .ts && prettier --write src/**/*.ts",
     "new": "zx ./scripts/new.js",
     "doc:sketches": "ts-node -P tools/tsconfig.json tools/src/readme-sketches.ts",
     "asset:optimize": "open -a ImageOptim ./assets/"
@@ -28,9 +28,13 @@
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/p5": "^1.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "@web/test-runner": "^0.13.15",
     "chai": "^4.3.4",
     "dateformat": "^4.5.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.1",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "snowpack": "^3.8.2",
