feat: add yifan210905

--- a/tools/config.json
+++ b/tools/config.json
@@ -72,6 +72,12 @@
             "screenshot": "yifan210812.png",
             "description": "blur grid",
             "reference": ""
+        },
+        {
+            "name": "yifan210905",
+            "screenshot": "yifan210905.png",
+            "description": "dice",
+            "reference": ""
         }
     ]
 }
