--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "clean": "rimraf .cache build",
-    "build": "snowpack build",
-    "start": "snowpack dev --reload",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "web-test-runner \"src/**/*.test.ts\"",
     "lint": "eslint . --quiet --fix --ext .ts && prettier --write src/**/*.ts",
     "new": "zx ./scripts/new.js",
@@ -23,8 +23,6 @@
     "p5": "^1.4.0"
   },
   "devDependencies": {
-    "@snowpack/plugin-typescript": "^1.2.1",
-    "@snowpack/web-test-runner-plugin": "^0.2.2",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/p5": "^1.3.0",
@@ -36,10 +34,10 @@
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.1",
     "prettier": "^2.3.2",
-    "rimraf": "^3.0.2",
-    "snowpack": "^3.8.2",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5",
+    "typescript": "^4.5.2",
+    "vite": "^2.6.14",
+    "vite-web-test-runner-plugin": "^0.1.0",
     "zx": "^2.0.0"
   }
 }
