feat: add yifan221121

--- a/tools/config.json
+++ b/tools/config.json
@@ -90,6 +90,12 @@
             "screenshot": "yifan210905.png",
             "description": "dice",
             "reference": ""
+        },
+        {
+            "name": "yifan221121",
+            "screenshot": "yifan221121.png",
+            "description": "recreate Roni Kaufman's work",
+            "reference": "https://twitter.com/KaufmanRoni/status/1589686357102063616"
         }
     ]
 }
