--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,10 @@
         "plugin:import/recommended",
         "plugin:import/typescript"
     ],
+    "env": {
+        "browser": true,
+        "node": true
+    },
     "rules": {
         "@typescript-eslint/ban-ts-comment": "off",
         "import/order": [
