--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "test": "web-test-runner \"src/**/*.test.ts\"",
     "lint": "eslint . --quiet --fix --ext .ts && prettier --write src/**/*.ts",
-    "new": "zx ./scripts/new.js",
+    "new": "ts-node -P tools/tsconfig.json ./scripts/new.ts",
     "doc:sketches": "ts-node -P tools/tsconfig.json tools/src/readme-sketches.ts",
     "asset:optimize": "open -a ImageOptim ./assets/"
   },
@@ -37,7 +37,6 @@
     "ts-node": "^10.2.1",
     "typescript": "^4.5.2",
     "vite": "^2.6.14",
-    "vite-web-test-runner-plugin": "^0.1.0",
-    "zx": "^2.0.0"
+    "vite-web-test-runner-plugin": "^0.1.0"
   }
 }
