feat: add yifan230407

--- a/tools/config.json
+++ b/tools/config.json
@@ -96,6 +96,12 @@
             "screenshot": "yifan221121.png",
             "description": "recreate Roni Kaufman's work",
             "reference": "https://twitter.com/KaufmanRoni/status/1589686357102063616"
+        },
+        {
+            "name": "yifan230407",
+            "screenshot": "yifan230407.png",
+            "description": "recreate Gorilla Sun's work",
+            "reference": "https://twitter.com/gorillasu/status/1644121608687177728"
         }
     ]
 }
