--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "web-test-runner \"src/**/*.test.ts\"",
     "lint": "eslint . --quiet --fix --ext .ts && prettier --write src/**/*.ts",
     "new": "ts-node -P tools/tsconfig.json tools/src/new-sketch.ts",
+    "set": "ts-node -P tools/tsconfig.json tools/src/set-sketch.ts",
     "doc:sketches": "ts-node -P tools/tsconfig.json tools/src/readme-sketches.ts",
     "asset:optimize": "open -a ImageOptim ./assets/"
   },
