feat: add yifan230409

--- a/tools/config.json
+++ b/tools/config.json
@@ -102,6 +102,12 @@
             "screenshot": "yifan230407.png",
             "description": "recreate Gorilla Sun's work",
             "reference": "https://twitter.com/gorillasu/status/1644121608687177728"
+        },
+        {
+            "name": "yifan230409",
+            "screenshot": "yifan230409.png",
+            "description": "yifan230407 + hatching",
+            "reference": "https://twitter.com/gorillasu/status/1644121608687177728"
         }
     ]
 }
