chore: update sketch description

--- a/tools/config.json
+++ b/tools/config.json
@@ -106,8 +106,8 @@
         {
             "name": "yifan230409",
             "screenshot": "yifan230409.png",
-            "description": "yifan230407 + hatching",
-            "reference": "https://twitter.com/gorillasu/status/1644121608687177728"
+            "description": "hatching",
+            "reference": "https://twitter.com/takasi83"
         }
     ]
 }
