feat: add yifan230820

--- a/tools/config.json
+++ b/tools/config.json
@@ -108,6 +108,12 @@
             "screenshot": "yifan230409.png",
             "description": "hatching",
             "reference": "https://twitter.com/takasi83"
+        },
+        {
+            "name": "yifan230820",
+            "screenshot": "yifan230820.png",
+            "description": "recreate Juhani Halkomäki's work",
+            "reference": "https://twitter.com/JuhaniHalkomaki/status/1690970414611132416?s=20"
         }
     ]
 }
